Delay setting trackUnreadMessages only after we have the model init'd

Reviewed-by: David Edmundson

BUG: 320570